<resources>
    <string name="app_name">Timber</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="add_channel">Add channel</string>
    <string name="search_channels">Search for channels</string>
    <string name="search_hint">Search</string>
    <string name="search">Searching</string>
    <string name="hint_chat">Aa</string>
    <string name="edit_channel">Edit chanel</string>
    <string name="login_text">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_title">Sign up</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="nickname_label">Nickname(alias)</string>
    <string name="input_nickname">Your nickname</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="username_new">New username</string>
    <string name="new_nickname">New nickname</string>
    <string name="edit_nickname">Change nickname</string>
    <string name="edit_username">New username</string>
    <string name="channel_title_transition_name">channel_title_transition_name</string>
    <string name="channel_image_transition_name">channel_image_transition_name</string>
    <string name="server_title">Servers</string>
    <string name="search_server">Search server</string>
    <string name="search_servers">Search servers</string>
    <string name="edit_server">Edit server</string>
    <string name="server_name">Server name</string>
    <string name="server_url">irc.freenode.net</string>
    <string name="online">Online</string>
    <string name="servers">Servers</string>
    <string name="see_more">See more</string>
    <string name="user_setting">User settings</string>
    <string name="username">Username</string>
    <string name="channelName">Channel Name</string>
    <string name="add_server">Add Server</string>
    <string name="serverName">Server Name</string>
    <string name="cancel">Cancel</string>
    <string name="channel_info">Channel infomation</string>
    <string name="setting">Setting</string>
    <string name="channel_handle">Channel handle</string>
    <string name="serverUrl">Server URL</string>
    <string name="serverPort">Port</string>
    <string name="channelDescription">Channel Description</string>
    <string name="channelCustom">Custom Name</string>
    <string name="apply_changes">Apply changes</string>
    <string name="user_profile_transition_name">user_profile_transition_name</string>
    <string name="server_name_transition_name">server_name_transition_name</string>
    <string name="confirm">Confirm</string>
    <string name="choose_color">Choose color</string>
</resources>