<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id = "@+id/login_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/person_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src = "@drawable/outline_person_pin">
    </ImageView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/outline_person_24"
        app:endIconMode="clear_text"
        android:hint="@string/edit_username"
        app:layout_constraintTop_toBottomOf="@id/login_icon">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_new"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/outline_person_24"
        app:endIconMode="clear_text"
        android:hint="@string/edit_nickname"
        app:layout_constraintTop_toBottomOf="@id/usernameTextField">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_nickname"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/outline_lock_24"
        android:hint="@string/old_password"
        app:layout_constraintTop_toBottomOf="@id/nicknameTextField"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_retype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/outline_lock_24"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_retype"
        android:layout_marginTop="@dimen/padding_size_3"
        android:text="@string/sign_up_text" />
</androidx.constraintlayout.widget.ConstraintLayout>